--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">run</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="fill_username_and_password">Please fill username and password!</string>
+    <string name="hello">Hello</string>
+    <string name="signin">Sign In</string>
+    <string name="session_expired">Session expired</string>
+    <string name="session_expired_message">Session has been expired. Please sign in.</string>
+    <string name="error_something_went_wrong">Ups! Something went wrong. Please try again.</string>
 </resources>
